# marssel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt
src/: CMakeLists.txt  main.cpp
src/IR/: basic_block.cpp  basic_block.h  cond.h  instruction.cpp  instruction.h  ir_emitter.cpp  ir_emitter.h  location_descriptor.cpp  location_descriptor.h  opcode.h  opcodes.inc  program.h  symbol_table.cpp  symbol_table.h  terminal.h  value.cpp  values.h
src/backends/spirv/: emit_spirv.h
src/common/: assert.h  intrusive_list.h  types.h
